[+] update .env added a .env.template to copy and edit instead

--- a/api-express/.env.template
+++ b/api-express/.env.template
@@ -1,3 +1,9 @@
+################################
+# PLEASE DO NOT USE THIS FILE #
+# COPY THIS FILE TO .env       #
+# AND EDIT IT                  #
+################################
+
 MONGODB_USER=ENTER_YOUR_MONGODB_USER
 MONDODB_PASSWORD=ENTER_YOUR_MONGODB_PASSWORD
 
