make mongodb url and port editable

--- a/api-express/.env.template
+++ b/api-express/.env.template
@@ -6,6 +6,8 @@
 
 MONGODB_USER=ENTER_YOUR_MONGODB_USER
 MONDODB_PASSWORD=ENTER_YOUR_MONGODB_PASSWORD
+MONGO_URL=ENTER_YOUR_MONGO_URL
+MONGO_PORT=ENTER_YOUR_MONGO_PORT
 
 ADMIN_USER=ENTER_YOUR_ADMIN_USER
 ADMIN_PASSWORD=ENTER_YOUR_ADMIN_PASSWORD
