--- a/api-express/.env.template
+++ b/api-express/.env.template
@@ -4,6 +4,7 @@
 # AND EDIT IT                  #
 ################################
 
+MONGO_WITH_AUTH=true_or_false
 MONGODB_USER=ENTER_YOUR_MONGODB_USER
 MONDODB_PASSWORD=ENTER_YOUR_MONGODB_PASSWORD
 MONGO_URL=ENTER_YOUR_MONGO_URL
