--- a/api-express/package.json
+++ b/api-express/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.0.3",
     "socket.io": "^4.7.3"
   }
