--- a/api-express/.env.template
+++ b/api-express/.env.template
@@ -14,4 +14,4 @@ MONGO_DB_NAME=ENTER_YOUR_MONGO_DB_NAME
 ADMIN_USER=ENTER_YOUR_ADMIN_USER
 ADMIN_PASSWORD=ENTER_YOUR_ADMIN_PASSWORD
 
-PORT=3001
+PORT=ENTER_YOUR_PORT
