--- a/react-front/package.json
+++ b/react-front/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "feather-icons-react": "^0.6.2",
+    "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
