--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build: ./api-express
     container_name: api-express
     restart: always
+    volumes:
+      - ./api-express/docker.env:/api-express/.env
     ports:
       - 3001:3001
     networks:
@@ -16,6 +18,8 @@ services:
     build: ./react-front
     container_name: react-front
     restart: always
+    volumes:
+      - ./react-front/docker.env:/react-front/.env
     ports:
       - 3000:3000
     networks:
@@ -37,7 +41,20 @@ services:
       - ./databases/mongodb:/data/db
     networks:
       - visioconf
-    
+      
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - react-front
+      - api-express
+      - mongodb
+    networks:
+      - visioconf
 
 networks:
   visioconf:
