--- a/react-front/dockerfile
+++ b/react-front/dockerfile
@@ -13,4 +13,6 @@ COPY . .
 
 EXPOSE 3000
 
-CMD [ "npm", "run", "dev", "--port=3000", "--host=0.0.0.0" ]
+RUN npm run build
+
+CMD [ "npm", "run", "start" ]
