--- a/react-front/package.json
+++ b/react-front/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
