--- a/api-express/.env.template
+++ b/api-express/.env.template
@@ -14,4 +14,6 @@ MONGO_DB_NAME=ENTER_YOUR_MONGO_DB_NAME
 ADMIN_USER=ENTER_YOUR_ADMIN_USER
 ADMIN_PASSWORD=ENTER_YOUR_ADMIN_PASSWORD
 
+JWT_SECRET=ENTER_YOUR_JWT_SECRET
+
 PORT=ENTER_YOUR_PORT
