--- a/react-front/package.json
+++ b/react-front/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "feather-icons": "^4.29.1",
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3"
   },
