--- a/react-front/package.json
+++ b/react-front/package.json
@@ -16,6 +16,7 @@
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
+    "react-collapsed": "^4.1.2",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.0",
