--- a/react-front/package.json
+++ b/react-front/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
