--- a/react-front/package.json
+++ b/react-front/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
