setup SMTP and send email when creating an user

--- a/api-express/.env.template
+++ b/api-express/.env.template
@@ -3,6 +3,7 @@
 # COPY THIS FILE TO .env       #
 # AND EDIT IT                  #
 ################################
+CLIENT_URL=http://localhost:3000
 
 MONGO_WITH_AUTH=true_or_false
 MONGO_USER=ENTER_YOUR_MONGODB_USER
@@ -13,6 +14,12 @@ MONGO_DB_NAME=ENTER_YOUR_MONGO_DB_NAME
 
 ADMIN_EMAIL=ENTER_YOUR_ADMIN_EMAIL
 ADMIN_PASSWORD=ENTER_YOUR_ADMIN_PASSWORD
+
+SMTP_HOST=ENTER_YOUR_SMTP_HOST
+SMTP_PORT=ENTER_YOUR_SMTP_PORT
+SMTP_SECURE=true_or_false
+SMTP_USER=ENTER_YOUR_SMTP_USER
+SMTP_PASSWORD=ENTER_YOUR_SMTP_PASSWORD
 
 JWT_SECRET=ENTER_YOUR_JWT_SECRET
 
