--- a/api-express/package.json
+++ b/api-express/package.json
@@ -17,6 +17,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.13",
     "socket.io": "^4.7.3",
     "uuid": "^9.0.1"
   }
