--- a/react-front/package.json
+++ b/react-front/package.json
@@ -15,6 +15,7 @@
     "feather-icons": "^4.29.1",
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^10.18.0",
+    "node-appwrite": "^12.0.1",
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
     "react-dom": "^18.2.0",
