--- a/api-express/package.json
+++ b/api-express/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.13",
+    "shortid": "^2.2.16",
     "socket.io": "^4.7.3",
     "uuid": "^9.0.1"
   }
